리스트 꾸미기중

--- a/src/main/webapp/resource/common.css
+++ b/src/main/webapp/resource/common.css
@@ -20,3 +20,11 @@
 .card-title + * {
   margin-top:var(--card-title_height);
 }
+
+.line-clamp-3 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
