--- a/src/main/webapp/resource/common.css
+++ b/src/main/webapp/resource/common.css
@@ -28,3 +28,17 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
 }
+
+.row-span-7 {
+  grid-row: span 7/span 7;
+}
+
+.row-span-8 {
+  grid-row: span 8/span 8;
+}
+
+@media ( max-width: 640px ) {
+  .sm\:col-span-3 {
+    grid-column: span 3 / span 3;
+  }
+}
